--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -102,6 +102,34 @@
     min-height: 950px;
 }
 
+
+header.interactive-mode .top-panel-custom h3{
+    color: white;
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 70px;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.75)
+}
+
+
+header.interactive-mode .top-panel-custom h4{
+    color: white;
+    font-weight: lighter;
+    font-size: 55px;
+    line-height: 70px;
+}
+
+.top-panel-custom{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: lef;
+    justify-content: center;
+    padding: 5%;
+    text-align: left;
+    color:white;
+}
+
 /* .tab-content {
 border: 1px solid #dee2e6;
 border-top: transparent;
