--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -124,13 +124,47 @@ header.interactive-mode .top-panel-custom h4 {
     width: 100%;
     display: flex;
     flex-flow: column;
-    align-items: lef;
+    align-items: left;
     justify-content: center;
     padding: 5%;
     text-align: left;
     color: white;
 }
 
+.top-panel-custom2{
+    background: linear-gradient(180deg, #3F3F3F 14.8%, #0A0202 142.11%);
+    flex-flow: unset;
+    height: 220px;
+}
+
+
+.top-panel-custom2 h3{
+    color: white;
+    font-weight: 700, bold;
+    font-size: 65px;
+    line-height: 70px;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.75);
+    display: inline-block;
+    padding-left: 2%;
+    white-space: nowrap;
+}
+
+.top-panel-custom2 h4{
+    color: white;
+    font-weight: lighter;
+    font-size: 65px;
+    line-height: 70px;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.top-panel-custom2 p{
+    color: white;
+    font-weight: 700, bold;
+    font-size: 40px;
+    line-height: 32px;
+    display: inline-block;
+}
 /* .tab-content {
 border: 1px solid #dee2e6;
 border-top: transparent;
@@ -143,3 +177,7 @@ color: #0080FF;
 min-height: 200px;
 height: auto;
 } */
+
+.btn-gray{
+    
+}
