home selected flow htmls

--- a/intearctive-mode-template/scss/app.scss
+++ b/intearctive-mode-template/scss/app.scss
@@ -6,6 +6,8 @@
 @import 'base/header.scss'; 
 @import 'base/footer.scss'; 
 
+@import 'components/corosel-imagegallery';
+
 @import 'pages/menu-view'; 
 @import 'pages/interactive-mode-template'; 
 @import 'pages/home-selected';
