--- a/intearctive-mode-template/scss/base/_header.scss
+++ b/intearctive-mode-template/scss/base/_header.scss
@@ -55,10 +55,12 @@ header.header-vb{
                 font-weight: 400;
                 line-height: 105px;
                 margin: 0;
+               @include scglight();
            }
            h3{
                text-transform: uppercase;
                margin: 0;
+               @include scgbold();
            }
        }
     }
