--- a/intearctive-mode-template/scss/pages/_home-selected.scss
+++ b/intearctive-mode-template/scss/pages/_home-selected.scss
@@ -56,10 +56,12 @@
     }
     h2{
         font-style: normal;
-        font-weight: 700;
+       
         font-size: 25px;
         line-height: 34px;
         color: $dark-grey8;
+        @include scgbold();
+
     }
     label{
         font-style: normal;
@@ -95,13 +97,14 @@
         }
     }
     ul{
-        margin-bottom: 4.4rem;
+        margin: 4.4rem 0;
         li{
             font-style: normal;
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
             color: $dark-grey;
+            @include scglight();
         }
     }
 }
