home selected css

--- a/intearctive-mode-template/scss/abstracts/_variables.scss
+++ b/intearctive-mode-template/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;500&display=swap');
-@import url(/css/iconmoon.css);
-@import url(/css/scg-font.css);
+@import url(../css/iconmoon.css);
+@import url(../css/scg-font.css);
 $white:#ffffff;
 $off-white:#FEFEFE;
 $black:#000000;
