--- a/intearctive-mode-template/templates/template1.html
+++ b/intearctive-mode-template/templates/template1.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/main.min.css" />
   <link rel="stylesheet" href="../css/custom/global_custom.css" />
   <link rel="stylesheet" href="../css/custom/template1.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
@@ -21,7 +22,11 @@
     </div>
     <div class="template1-content-panel position-relative ">
             <div id="video-panel" class="">
-                video
+              <video width="100%" height="100%" controls>
+                <source src="" type="video/mp4">
+                <!-- <source src="movie.ogg" type="video/ogg"> -->
+              Your browser does not support the video tag.
+              </video>
             </div>
             <div class="d-flex align-items-center justify-content-center pt-5"> 
                 <button type="button" class="btn btn-secondary btn-template1 d-flex align-items-center justify-content-center">
@@ -55,5 +60,35 @@
   </main>
   <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
+<script>
+  $(document).ready(function(){
+  // $("p").click(function(){
+  //   $(this).hide();
+  // });
+    $.getJSON('../configs.json', function(jd) {
+      // console.log(jd)
+      
+      // console.log($('#video-panel source'))
+      // debugger
+      // $('#video-panel source').attr('src', jd.page.ceiling-and-wall.front.videos[0])
+      // for (var i=0; i <  jd.page.roof.front.videos.length; i++){
+      //   console.log(i)
+      // }
 
+      $('#video-panel source').attr('src', jd.page.home_selected.front.videos[0].url)
+      setTimeout(() => {
+        
+      }, jd.page.roof.front.videos[0].duration);
+
+      $("#video-panel video")[0].load();
+      // $('#stage').html('<p> Name: ' + jd.name + '</p>');
+      // $('#stage').append('<p>Age : ' + jd.age+ '</p>');
+      // $('#stage').append('<p> Sex: ' + jd.sex+ '</p>');
+
+    }).fail(function(){
+      console.log('fail')
+    });
+  // alert('hi')
+});
+</script>
 </html>
