celing and wall html updated

--- a/intearctive-mode-template/scss/app.scss
+++ b/intearctive-mode-template/scss/app.scss
@@ -7,7 +7,10 @@
 @import 'base/footer.scss'; 
 
 @import 'components/corosel-imagegallery';
+@import 'components/navtabs';
+@import 'components/product-card';
 
 @import 'pages/menu-view'; 
 @import 'pages/interactive-mode-template'; 
 @import 'pages/home-selected';
+@import 'pages/celingandwall';
