--- a/intearctive-mode-template/css/iconmoon.css
+++ b/intearctive-mode-template/css/iconmoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?u1l5y4');
-  src:  url('fonts/icomoon.eot?u1l5y4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?u1l5y4') format('truetype'),
-    url('fonts/icomoon.woff?u1l5y4') format('woff'),
-    url('fonts/icomoon.svg?u1l5y4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?kasody');
+  src:  url('fonts/icomoon.eot?kasody#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kasody') format('truetype'),
+    url('fonts/icomoon.woff?kasody') format('woff'),
+    url('fonts/icomoon.svg?kasody#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,37 +25,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-fb:before {
+.icon-home:before {
   content: "\e903";
-  color: #ec1c24;
+  color: #fff;
 }
-.icon-yt .path1:before {
+.icon-tree:before {
   content: "\e904";
-  color: rgb(236, 28, 36);
-}
-.icon-yt .path2:before {
-  content: "\e905";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
-}
-.icon-insta .path1:before {
-  content: "\e906";
-  color: rgb(236, 28, 36);
-}
-.icon-insta .path2:before {
-  content: "\e907";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
-}
-.icon-insta .path3:before {
-  content: "\e908";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
-}
-.icon-insta .path4:before {
-  content: "\e909";
-  margin-left: -1em;
-  color: rgb(255, 255, 255);
+  color: #ec1c24;
 }
 .icon-back:before {
   content: "\e902";
