--- a/intearctive-mode-template/templates/template1.html
+++ b/intearctive-mode-template/templates/template1.html
@@ -12,9 +12,8 @@
 </head>
 <body>
   <main class="main-content w-100 interactive-mode template1-body-custom main-sizing">
-    <div class="top-panel-custom2 position-relative">
-
-      <div class="position-absolute top-50 start-50 translate-middle">
+    <div class="top-panel-custom2 d-flex justify-content-center align-items-center">
+      <div class="position-absolute">
         <div class = 'd-flex justify-content-center'><h4>กลุ่มสินค้า</h4> <h3>CEILING & WALL</h3></div>
         <div class = 'd-flex justify-content-center pt-4'> <p>ดูแลครบ จบทุกการออกแบบบ้านและอาคาร </p></div>\
       </div>
