pdp page updated

--- a/intearctive-mode-template/scss/app.scss
+++ b/intearctive-mode-template/scss/app.scss
@@ -12,5 +12,5 @@
 
 @import 'pages/menu-view'; 
 @import 'pages/interactive-mode-template'; 
-@import 'pages/home-selected';
+@import 'pages/pdp';
 @import 'pages/celingandwall';
