pdp htmls udpated

--- a/intearctive-mode-template/scss/abstracts/_variables.scss
+++ b/intearctive-mode-template/scss/abstracts/_variables.scss
@@ -29,7 +29,7 @@ $dark-grey7:#131313;
 $dark-grey8:#323232;
 $dark-grey9:#1C1D1D;
 $lite-grey:#666666;
-
+$gold: #D5AF26;
 
 @mixin headerplaingbg {
     background:linear-gradient(180deg, $red-new 0%, $red-new1 100%);   
