product list version 3

--- a/intearctive-mode-template/css/custom/template1.css
+++ b/intearctive-mode-template/css/custom/template1.css
@@ -153,6 +153,10 @@
 
 }
 
+.qr-box-footer img:nth-child(2){
+    width: 86px;
+    height: 78px;
+}
 .qr-box-footer p {
     padding-top: 10px;
     font-weight: 700;
