pdp noprice and buy cashier updated

--- a/intearctive-mode-template/scss/base/_base.scss
+++ b/intearctive-mode-template/scss/base/_base.scss
@@ -22,6 +22,10 @@ a {
 }
 body{
   font-family: 'Prompt', sans-serif;
+  &.width-control{
+    width: 1080px;
+    height: 1920px;
+  }
   }
 .star{
   color: $primary;
