--- a/intearctive-mode-template/scss/base/_header.scss
+++ b/intearctive-mode-template/scss/base/_header.scss
@@ -63,5 +63,35 @@ header.header-vb{
                
            }
        }
+       &.black{
+        background:linear-gradient(180deg, #3F3F3F 14.8%, #0A0202 142.11%);
+        & + .main-content{
+            .quote-section{
+                padding: 0 6.5rem;
+                &::before{
+                    display: none;
+                }
+                figure{
+                    max-width: 23rem;
+                }
+            }
+        }
+        .top-panel{
+            padding: 0px 4.2rem;
+            h3{
+                font-size: 4.5rem;
+                line-height: 65px;
+            }
+            h4{
+                font-size: 3.5rem;
+                line-height: 37px;
+            }
+            figure{
+                position: absolute;
+                right: 3rem;
+                top: 3rem;
+            }
+        }
+       }
     }
 }
