--- a/intearctive-mode-template/css/iconmoon.css
+++ b/intearctive-mode-template/css/iconmoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?vkgxwx');
-  src:  url('fonts/icomoon.eot?vkgxwx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?vkgxwx') format('truetype'),
-    url('fonts/icomoon.woff?vkgxwx') format('woff'),
-    url('fonts/icomoon.svg?vkgxwx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?y9gi0x');
+  src:  url('fonts/icomoon.eot?y9gi0x#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?y9gi0x') format('truetype'),
+    url('fonts/icomoon.woff?y9gi0x') format('woff'),
+    url('fonts/icomoon.svg?y9gi0x#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bag:before {
+  content: "\e90c";
+  color: #ec1c24;
+}
 .icon-fb:before {
   content: "\e905";
   color: #ec1c24;
