modal promotion banner done

--- a/intearctive-mode-template/scss/abstracts/_variables.scss
+++ b/intearctive-mode-template/scss/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $light-grey-4:#BBBBBB;
 $dark-grey:#231F20;
 $neutral-grey:#DADADA;
 $off-white:#F8F8F8;
+$off-white1:#F3F3F3;
 $red-medium:#D32F27;
 $red-new:#EC1C24;
 $red-txt:#BB1E25;
@@ -29,6 +30,7 @@ $dark-grey7:#131313;
 $dark-grey8:#323232;
 $dark-grey9:#1C1D1D;
 $lite-grey:#666666;
+$lite-grey1:#938F8F;
 $gold: #D5AF26;
 
 @mixin headerplaingbg {
