--- a/intearctive-mode-template/scss/app.scss
+++ b/intearctive-mode-template/scss/app.scss
@@ -9,6 +9,7 @@
 @import 'components/corosel-imagegallery';
 @import 'components/navtabs';
 @import 'components/product-card';
+@import 'components/modal';
 
 @import 'pages/menu-view'; 
 @import 'pages/interactive-mode-template'; 
