--- a/intearctive-mode-template/scss/base/_layout.scss
+++ b/intearctive-mode-template/scss/base/_layout.scss
@@ -157,6 +157,7 @@
         @include box-shadow(0px, 4px, 40px,rgba(0, 0, 0, 0.12) );
         @include border-radius(.6rem);
         padding-bottom: 5rem;
+        min-height: 920px;
         .inner-content{
             padding: 4rem 5rem 0rem 10rem;
         }
