--- a/intearctive-mode-template/css/iconmoon.css
+++ b/intearctive-mode-template/css/iconmoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?y9gi0x');
-  src:  url('fonts/icomoon.eot?y9gi0x#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?y9gi0x') format('truetype'),
-    url('fonts/icomoon.woff?y9gi0x') format('woff'),
-    url('fonts/icomoon.svg?y9gi0x#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?k5pgh7');
+  src:  url('fonts/icomoon.eot?k5pgh7#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?k5pgh7') format('truetype'),
+    url('fonts/icomoon.woff?k5pgh7') format('woff'),
+    url('fonts/icomoon.svg?k5pgh7#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-close:before {
+  content: "\e90e";
+}
+.icon-location:before {
+  content: "\e90d";
+  color: #d81a23;
+}
 .icon-bag:before {
   content: "\e90c";
   color: #ec1c24;
