--- a/intearctive-mode-template/scss/base/_forms.scss
+++ b/intearctive-mode-template/scss/base/_forms.scss
@@ -67,3 +67,22 @@ input[type = 'text']{
         font-size: 2.8rem;
     }
 }
+.btn-rednew{
+    background:  #EC1C24;
+    height: 7rem;
+    @include border-radius(.6rem);
+    color: $white;
+    width: 18.5rem;
+    padding: 0;
+    font-size: 17px;
+    @include xycenter();
+    &:hover{
+        color: $white;
+    }
+    i{
+        font-size: 2.8rem;
+        font-weight: 600;
+        margin-right: .5rem;
+    
+    }
+}
