add qrcode footer and change bg color 1st page

--- a/intearctive-mode-template/css/custom/template1.css
+++ b/intearctive-mode-template/css/custom/template1.css
@@ -1,7 +1,7 @@
 /* #EC1C24 */
 
 .template1-content-panel {
-    background-color: #EC1C24;
+    background-color: #FE3822;
     height: 1700px;
 }
 
