--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -164,6 +164,18 @@ header.interactive-mode .top-panel-custom h4{
     line-height: 32px;
     display: inline-block;
 }
+
+.product-image-corosel-custom{
+    transform: scale(1.3);
+    margin-left: 5.2rem; 
+    margin-top: 1.2rem;
+}
+
+.product-details-custom{
+    margin-top: -6rem;
+    margin-left: 3rem;
+}
+
 /* .tab-content {
 border: 1px solid #dee2e6;
 border-top: transparent;
