--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -165,27 +165,15 @@ header.interactive-mode .top-panel-custom h4{
     display: inline-block;
 }
 
-.product-image-corosel-custom{
-    transform: scale(1.3);
-    margin-left: 5.2rem; 
-    margin-top: 1.2rem;
+.inner-content-custom{
+    margin-top:-7rem;
+}
+
+.carousel-inner-custom{
+    width:40rem;
+    height: 40rem;
 }
 
 .product-details-custom{
-    margin-top: -6rem;
-    margin-left: 3rem;
+    margin-left: 11rem;
 }
-
-/* .tab-content {
-border: 1px solid #dee2e6;
-border-top: transparent;
-padding: 15px;
-}
-
-.tab-content .tab-pane {
-background-color: #FFF;
-color: #0080FF;
-min-height: 200px;
-height: auto;
-} */
-
