--- a/mobile/scss/abstracts/_variables.scss
+++ b/mobile/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;500&display=swap');
-@import url(/css/iconmoon.css);
+@import url(../css/iconmoon.css);
 $white:#ffffff;
 $black:#000000;
 $theme-primary:#000;
