--- a/mobile/scss/base/_forms.scss
+++ b/mobile/scss/base/_forms.scss
@@ -1,4 +1,4 @@
-input[type = 'text']{
+input[type = 'text'],input[type = 'email'], input[type = 'number']{
     height: 40px;
     @include border-radius(.8rem);
     border:.1rem solid $light-grey;
@@ -7,11 +7,15 @@ input[type = 'text']{
 }
 .btn-primary{
     @include border-radius(.6rem);
-    background: $neutral-grey;
+    background: $primary;
     height: 44px;
     width: 100%;
     border: none;
     font-family: 'Prompt', sans-serif;
+    &:hover{
+        background-color: $primary;
+        border-color: none ;
+    }
 }
 .btn-outline{
     font-family: 'Prompt', sans-serif;
