--- a/intearctive-mode-template/scss/base/_header.scss
+++ b/intearctive-mode-template/scss/base/_header.scss
@@ -55,6 +55,7 @@ header.header-vb{
                 font-weight:100;
                 line-height: 105px;
                 margin: 0;
+                text-shadow: 0px 3px 1px #000000;
               
            }
            h3{
