update font weight text purchase

--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -191,3 +191,6 @@ header.interactive-mode .top-panel-custom h4{
     -webkit-user-select:none;
 }
 
+.puchase-options h6{
+    font-weight: 400 !important;
+}
