fix wording stagram

--- a/intearctive-mode-template/templates/template1.html
+++ b/intearctive-mode-template/templates/template1.html
@@ -40,7 +40,7 @@
             <div class="footer-right-content d-flex flex-column">
                 <div class="group-qr-code-footer">
                     <div class="qr-box-footer shadow"> <p> <img src="../images/fb-logo.png" alt=""> Facebook </p> <img src="../images/qrcode.png" alt=""> </div>
-                    <div class="qr-box-footer shadow"> <p> <img src="../images/ig-logo.png" alt=""> Instragram </p> <img src="../images/qrcode.png" alt=""> </div>
+                    <div class="qr-box-footer shadow"> <p> <img src="../images/ig-logo.png" alt=""> instagram </p> <img src="../images/qrcode.png" alt=""> </div>
                     <div class="qr-box-footer shadow"> <p> <img src="../images/yt-logo.png" alt=""> Youtube </p> <img src="../images/qrcode.png" alt=""> </div>
                 </div>
                 <div class="footer-text-right mt-5">
