--- a/mobile/scss/base/_forms.scss
+++ b/mobile/scss/base/_forms.scss
@@ -1,4 +1,4 @@
-input[type = 'text'],input[type = 'email'], input[type = 'number']{
+input[type = 'text'],input[type = 'email'], input[type = 'number'],  input[type = 'tel']{
     height: 40px;
     @include border-radius(.8rem);
     border:.1rem solid $light-grey;
