--- a/intearctive-mode-template/css/custom/global_custom.css
+++ b/intearctive-mode-template/css/custom/global_custom.css
@@ -2,7 +2,12 @@ html{
     -moz-user-select:none;
     -ms-user-select:none;
     -webkit-user-select:none;
+    transform: scale(0.8);
+    position: absolute;
+    left:0;
+    top:0;
 }
+
 
 .product-card-custom{
     border-radius: 6px;
