ui and autoplay whole update

--- a/intearctive-mode-template/css/custom/template1.css
+++ b/intearctive-mode-template/css/custom/template1.css
@@ -1,7 +1,8 @@
 /* #EC1C24 */
 
 .template1-content-panel {
-    background-color: #FE3822;
+    /* background-color: #FE3822; */
+    background-color: #ff2718;
     height: 1700px;
 }
 
