--- a/intearctive-mode-template/css/custom/cw_scale_down.css
+++ b/intearctive-mode-template/css/custom/cw_scale_down.css
@@ -12,3 +12,12 @@ body{
     position: absolute;
 }
 
+#modal-promotionbanner{
+    position: absolute;
+}
+
+.modal-backdrop.show{
+    position: absolute;
+    width: 200vw;
+    height: 400vh;
+}
