--- a/intearctive-mode-template/css/custom/product_list1.css
+++ b/intearctive-mode-template/css/custom/product_list1.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     background: #FFFFFF;
-    background-image: url(/intearctive-mode-template/images/gray-bg.png);
+    background-image: url(../images/gray-bg.png);
     background-size: 100%;
     z-index: 0;
     position: relative;
