--- a/intearctive-mode-template/css/custom/cw_template2.css
+++ b/intearctive-mode-template/css/custom/cw_template2.css
@@ -15,7 +15,7 @@
     align-items: center;
     width: 100%;
     height: 60%;
-    background: url(/intearctive-mode-template/images/product_list/bg-template2.png);
+    background: url(../images/product_list/bg-template2.png);
     margin-bottom: 15px;
 }
 
